[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/screens/dialogue/TimeLine.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/UI_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/ui/UI_texture_noBG.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/UI_texture.png" type="Texture" id=6]
[ext_resource path="res://src/screens/dialogue/Graduations.gd" type="Script" id=7]
[ext_resource path="res://assets/ui/UI_buttonLock.png" type="Texture" id=8]
[ext_resource path="res://src/screens/dialogue/TimelineDropZone.tscn" type="PackedScene" id=9]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[node name="TimeLine" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
speed = 50

[node name="OpponentInfos" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="OpponentInfos"]
margin_right = 412.0
margin_bottom = 250.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="OpponentInfos"]
margin_left = 416.0
margin_right = 480.0
margin_bottom = 250.0
size_flags_horizontal = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OpponentInfos/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 8
texture = ExtResource( 5 )

[node name="WillBar" type="TextureProgress" parent="OpponentInfos/HBoxContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 76.0
size_flags_horizontal = 3
texture_under = ExtResource( 6 )
texture_progress = SubResource( 4 )
fill_mode = 1
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_right = 1
stretch_margin_bottom = 8

[node name="TimelineContainer" type="Control" parent="."]
margin_top = 254.0
margin_right = 480.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 16 )
mouse_filter = 1
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="TimelineContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -1.0
margin_right = -16.0
margin_bottom = 3.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropZones" type="Control" parent="TimelineContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
rect_clip_content = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect2" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect3" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect4" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect5" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect6" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect7" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect8" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect9" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="TextureRect10" parent="TimelineContainer/DropZones" instance=ExtResource( 9 )]

[node name="Replies" type="Control" parent="TimelineContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trigger" type="NinePatchRect" parent="TimelineContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -15.0
rect_min_size = Vector2( 15, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="TimelineContainer/Trigger"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TimelineContainer/Trigger/Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="TextureLock" type="TextureRect" parent="TimelineContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -22.0
margin_right = -11.0
margin_bottom = -11.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="TimelineContainer/Trigger/Area2D" to="." method="_on_trigger_area_entered"]
[connection signal="area_exited" from="TimelineContainer/Trigger/Area2D" to="." method="_on_trigger_area_exited"]
